RESOLVED FIXED311304
REGRESSION (307242@main): YouTube takes longer to load a page
https://bugs.webkit.org/show_bug.cgi?id=311304
Summary REGRESSION (307242@main): YouTube takes longer to load a page
Jean-Yves Avenard [:jya]
Reported 2026-04-01 17:29:08 PDT
~60% YouTube page load regression when MediaContainmentEnabled feature is turned on rdar://172104196
Attachments
Jean-Yves Avenard [:jya]
Comment 1 2026-04-01 18:29:32 PDT
EWS
Comment 2 2026-04-02 16:08:56 PDT
Committed 310474@main (4d9d9d1b5628): <https://commits.webkit.org/310474@main> Reviewed commits have been landed. Closing PR #61869 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.